接口登记 接口开放页面

--- a/webRoot/static/commonCss/home.css
+++ b/webRoot/static/commonCss/home.css
@@ -55,5 +55,15 @@
     line-height: 48px;
     background: #465666;
 }
+.form-serch {
+  width: 100%;
+  text-align: left;
+  display: flex;
+  padding: 20px 20px 0 30px;
+}
 
+.form-serch .demonstration {
+  font-size: 14px;
+  margin-right: 6px;
+}
     
