--- a/webRoot/static/commonCss/common.css
+++ b/webRoot/static/commonCss/common.css
@@ -310,7 +310,7 @@
   /* 弹框样式 */
 .el-dialog{
     border-radius: 4px !important;
-    min-width: 750px;
+    min-width: 760px;
     max-height: 824px;
     margin-top: 10px !important;
 }
@@ -324,12 +324,12 @@
     padding: 10px 16px !important;
 }
 .seach-con {
-    width: 220px;
     margin-left: 20px;
     border: 1px solid #dde2e3;
     border-radius: 4px;
     height: 30px;
     display: flex;
+    margin-top: 10px;
   }
   .seach-con .demonstration {
     display: inline-block;
@@ -343,7 +343,7 @@
   .pagecon-box {
     border-radius: 4px;
     border: 1px solid #dde2e3;
-    height: 306px;
+    height: 290px;
     background: white;
   }
   .page-content-box {
@@ -411,4 +411,8 @@
 .el-tabs__item{
     height: 32px !important;
     line-height: 32px !important;
+}
+/* 多选框不拉伸 */
+.el-textarea__inner{
+    resize: none !important;
 }
